--- a/frontend/src/components/WaitingLobby.css
+++ b/frontend/src/components/WaitingLobby.css
@@ -1,49 +1,115 @@
-/* WaitingLobby.css */
+/* Container styling */
+.waiting-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: url('assets/login-backdrop-desktop.jpeg') no-repeat center center/cover; /* Add your custom background image URL */
+  font-family: 'Arial', sans-serif;
+}
 
 .waiting-lobby {
   text-align: center;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+  width: 600px;
   margin: 20px;
+  padding: 20px;
+  border: 1px solid #000;
+  border-radius: 10px;
+  background-color: rgba(50, 50, 50, 0.8);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
+.waiting-lobby h2 {
+  margin-bottom: 20px;
+  font-size: 36px;
+  color: #fff;
+}
+
+/* List styling */
 .player-list {
   margin: 20px 0;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  background-color: #f9f9f9;
-  max-width: 300px;
-  margin: 0 auto;
+  padding: 0;
+  list-style-type: none;
 }
 
-.player-name {
+.player-item {
   display: flex;
   align-items: center;
-  padding: 5px 0;
-  border-bottom: 1px solid #ddd;
+  padding: 10px;
+  border-bottom: 1px solid #eee;
 }
 
-.player-name:last-child {
+.player-item:last-child {
   border-bottom: none;
 }
 
-.player-name img {
-  width: 40px;
-  height: 40px;
+/* Image styling */
+.profile-image {
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
-  margin-right: 10px;
+  margin-right: 15px;
 }
 
-button {
-  padding: 10px 20px;
-  background-color: #4CAF50;
-  border: none;
-  border-radius: 5px;
-  font-size: 16px;
-  color: white;
+/* Player name styling */
+.player-name {
+  font-size: 18px;
+  font-weight: 500;
+  color: #fff;
+}
+
+/* Button styling */
+.start-button {
+  align-items: center;
+  max-width: 170px;
+  background-color: initial;
+  background-image: linear-gradient(#464d55, #25292e);
+  border-radius: 8px;
+  border-width: 0;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, .1),0 3px 6px rgba(0, 0, 0, .05);
+  box-sizing: border-box;
+  color: #fff;
   cursor: pointer;
-  transition: background-color 0.3s;
+  display: inline-flex;
+  flex-direction: column;
+  font-family: expo-brand-demi,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-size: 18px;
+  height: 52px;
+  justify-content: center;
+  line-height: 1;
+  margin: 0;
+  outline: none;
+  overflow: hidden;
+  padding: 0 32px;
+  text-align: center;
+  text-decoration: none;
+  transform: translate3d(0, 0, 0);
+  transition: all 150ms;
+  vertical-align: baseline;
+  white-space: nowrap;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
 }
 
-button:hover {
-  background-color: #45a049;
+.start-button button:hover {
+  box-shadow: rgba(0, 1, 0, .2) 0 2px 8px;
+  opacity: .85;
+}
+
+.start-button button:active {
+  outline: 0;
+}
+
+.start-button button:focus {
+  box-shadow: rgba(0, 0, 0, .5) 0 0 0 3px;
+}
+
+@media (max-width: 420px) {
+  .start-button button {
+    height: 48px;
+  }
 }
