--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,6 +6,7 @@ body, html {
   width: 100%;
   height: 100%;
   font-family: 'Arial', sans-serif;
+  background: url('components/assets/login-backdrop-desktop.jpeg') no-repeat center center/cover; /* Add your custom background image URL */
 }
 
 .App {
