--- a/frontend/src/components/GameResults.css
+++ b/frontend/src/components/GameResults.css
@@ -1,5 +1,13 @@
+
 .game-results {
   text-align: center;
+  background: rgba(50, 50, 50, 0.8);
+}
+
+.game-results h2 {
+  margin-bottom: 20px;
+  font-size: 48px;	
+  color: #fff;
 }
 
 .results-grid {
@@ -9,22 +17,23 @@
 }
 
 .player-result {
-  border: 1px solid #ccc;
-  padding: 20px;
-  border-radius: 8px;
+  padding: 20px;	
   text-align: center;
+  color: #fff;
 }
 
 .player-result img {
   width: 100px;
   height: 100px;
   border-radius: 50%;
+  color: #fff;
 }
 
 .player-cards {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  color: #fff;
 }
 
 .player-cards .card {
@@ -32,4 +41,6 @@
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
+  background-color : #fff;
+  color: #fff;
 }
